--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Blogsection from '../components/Blogsection.astro';
 
 <Layout
   description="Play Astro is a free and open-source Astro template, built for startups, SaaS companies, apps, businesses, and more."
-  title="Free Astro Template and Starter for SaaS, Startup, and App Sites | Play Astro"
+  title="FLOPACH | MECANICA"
 >
   <Hero />
   <Features />
