header and hero modified

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Blogsection from '../components/Blogsection.astro';
 ---
 
 <Layout
-  description="Play Astro is a free and open-source Astro template, built for startups, SaaS companies, apps, businesses, and more."
+  description="Flopach"
   title="FLOPACH | MECANICA"
 >
   <Hero />
