--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ interface Props {
 const { description, title, image } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -36,14 +36,19 @@ const { description, title, image } = Astro.props;
     </main>
     <Footer />
     <BackToTop />
-    <MadeWithButton />
+    <!-- <MadeWithButton /> -->
     <style is:global>
-      @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap');
       body {
-        font-family: "Inter", sans-serif;
+        /* font-family: 'Inter', sans-serif; */
+        font-family: 'Inter', sans-serif;
+      }
+      html {
+        scroll-behavior: smooth;
       }
       .sticky-header {
-        @apply fixed z-[9999] bg-white/80 dark:bg-dark/80 transition;
+        @apply fixed z-[9999] bg-white/80 transition dark:bg-dark/80;
         backdrop-filter: blur(5px);
         box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
       }
@@ -57,7 +62,7 @@ const { description, title, image } = Astro.props;
       }
 
       .sticky-header #navbarCollapse li > a {
-        @apply text-dark dark:text-white hover:text-primary dark:hover:text-primary hover:opacity-100;
+        @apply text-dark hover:text-primary hover:opacity-100 dark:text-white dark:hover:text-primary;
       }
       #navbarCollapse li .ud-menu-scroll.active {
         @apply opacity-70;
@@ -66,7 +71,7 @@ const { description, title, image } = Astro.props;
         @apply text-primary opacity-100;
       }
       .sticky-header .loginBtn {
-        @apply text-dark dark:text-white hover:text-primary dark:hover:text-primary hover:opacity-100;
+        @apply text-dark hover:text-primary hover:opacity-100 dark:text-white dark:hover:text-primary;
       }
 
       .sticky-header .signUpBtn {
@@ -94,22 +99,21 @@ const { description, title, image } = Astro.props;
 
       .common-carousel .swiper-button-next,
       .common-carousel .swiper-button-prev {
-        @apply !static h-12 w-12 rounded-lg bg-white dark:bg-dark shadow-testimonial-btn text-dark dark:text-white m-0 ease-out duration-200 hover:bg-primary hover:text-white hover:shadow-none;
+        @apply !static m-0 h-12 w-12 rounded-lg bg-white text-dark shadow-testimonial-btn duration-200 ease-out hover:bg-primary hover:text-white hover:shadow-none dark:bg-dark dark:text-white;
       }
 
       .common-carousel .swiper-button-next svg,
       .common-carousel .swiper-button-prev svg {
-        @apply w-auto h-auto;
+        @apply h-auto w-auto;
       }
-
     </style>
     <script>
-      import "../scripts/stickymenu.js";
-      import "../scripts/dropdown.js";
-      import "../scripts/darkMode.js";
-      import "../scripts/scrolltop.js";
-      import "../scripts/scrollmenu.js";
-      import "../scripts/testimonial.js";
+      import '../scripts/stickymenu.js';
+      import '../scripts/dropdown.js';
+      import '../scripts/darkMode.js';
+      import '../scripts/scrolltop.js';
+      import '../scripts/scrollmenu.js';
+      import '../scripts/testimonial.js';
     </script>
   </body>
 </html>
