--- a/src/components/Aboutsection.astro
+++ b/src/components/Aboutsection.astro
@@ -55,10 +55,7 @@
               >
                 <div>
                   <span class="block text-5xl font-extrabold text-white">10</span>
-                  <span class="block text-base font-semibold text-white">Nosotros tenemos</span>
-                  <span class="block text-base font-medium text-white text-opacity-70">
-                    Años de experiencia
-                  </span>
+                  <span class="block text-base font-semibold text-white">Años de experiencia</span>
                 </div>
                 <div>
                   <span class="absolute left-0 top-0 -z-10">
