--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -2,58 +2,49 @@
 const testimonials = [
   {
     authorName: 'Enzo Pajuelo',
-    authorRole: 'Founder @ Rolex',
-    image: '/assets/testimonials/author-01.jpg',
+    authorRole: 'Cliente',
+    image: '/assets/testimonials/author1.png',
     message: `“Excelente servicio. Recibí auxilio mecánico, y el mecánico se dio la moletia de ir a comprar una bateria en otra tienda para auxiliarme a 1 hora y media de huanuco. Lo recomiendo, muy amable y buen trato. 😄.”`,
   },
   {
-    authorName: 'Musharof Chowdhury',
-    authorRole: 'Founder @ Ayro UI',
-    image: '/assets/testimonials/author-02.jpg',
-    message: `“Our members are so impressed. It's intuitive. It's clean. It's distraction free. If you're building a community.”`,
+    authorName: 'Lu Daniela Aguirre',
+    authorRole: 'Cliente',
+    image: '/assets/testimonials/author3.png',
+    message: `“Excelente atención, el personal encontró rápido el problema que tenía mi vehículo y la reparación fue óptima, me explicaron detalladamente lo que iban haciendo, y eso me dio confianza.”`,
   },
   {
-    authorName: 'William Smith',
-    authorRole: 'Founder @ Trorex',
-    image: '/assets/testimonials/author-03.jpg',
-    message: `“Our members are so impressed. It's intuitive. It's clean. It's distraction free. If you're building a community.”`,
+    authorName: 'Urbanito Guzmáncito',
+    authorRole: 'Cliente',
+    image: '/assets/testimonials/author2.png',
+    message: `“Buenos mecánicos trabajo de inmediato.”`,
   },
   {
-    authorName: 'Sabo Masties',
-    authorRole: 'Founder @ Rolex',
-    image: '/assets/testimonials/author-01.jpg',
-    message: `“Our members are so impressed. It's intuitive. It's clean. It's distraction free. If you're building a community.”`,
-  },
-  {
-    authorName: 'Musharof Chowdhury',
-    authorRole: 'Founder @ Ayro UI',
-    image: '/assets/testimonials/author-02.jpg',
-    message: `“Our members are so impressed. It's intuitive. It's clean. It's distraction free. If you're building a community.”`,
-  },
-  {
-    authorName: 'William Smith',
-    authorRole: 'Founder @ Trorex',
-    image: '/assets/testimonials/author-03.jpg',
-    message: `“Our members are so impressed. It's intuitive. It's clean. It's distraction free. If you're building a community.”`,
+    authorName: 'Robert Cholan Rodriguez',
+    authorRole: 'Cliente',
+    image: '/assets/testimonials/author4.png',
+    message: `“Excelente atención.”`,
   },
 ];
 ---
 
-<section id="testimonials" class="overflow-hidden bg-gray-1 py-20 dark:bg-dark-2 md:py-[120px]">
+<section id="testimonials" class="overflow-hidden bg-gray-1 py-20 dark:bg-slate-400 md:py-[120px]">
   <div class="container px-4">
     <div class="-mx-4 flex flex-wrap justify-center">
       <div class="w-full px-4">
         <div class="mx-auto mb-[60px] max-w-[485px] text-center">
-          <span class="mb-2 block text-lg font-semibold text-primary"> Testimonials</span>
+          <span
+            class="mb-2 block text-lg font-semibold text-primary"
+            style="font-family: 'Oxanium';"
+          >
+            Testimonios</span
+          >
           <h2
             class="mb-3 text-3xl font-bold leading-[1.2] text-dark dark:text-white sm:text-4xl md:text-[40px]"
+            style="font-family: 'Oxanium';"
           >
-            What our Clients Say
+            ¿Qué dicen nuestros clientes?
           </h2>
-          <p class="text-base text-body-color dark:text-dark-6">
-            There are many variations of passages of Lorem Ipsum available but the majority have
-            suffered alteration in some form.
-          </p>
+          <p class="text-base text-body-color dark:text-dark-6"></p>
         </div>
       </div>
     </div>
