--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,19 +13,16 @@ import CTA from '../components/CTAsection.astro';
 import Blogsection from '../components/Blogsection.astro';
 ---
 
-<Layout
-  description="Flopach"
-  title="FLOPACH | MECANICA"
->
+<Layout description="Flopach" title="FLOPACH | MECANICA">
   <Hero />
-  <Features />
   <About />
-  <CTA />
-  <Pricing />
-  <Testimonials />
-  <Faq />
+  <Features />
+  <!-- <CTA /> -->
+  <!-- <Pricing /> -->
   <Team />
-  <Blogsection />
+  <Testimonials />
+  <!-- <Faq /> -->
+  <!-- <Blogsection /> -->
   <Contact />
-  <Clients />
+  <!-- <Clients /> -->
 </Layout>
