--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -2,31 +2,35 @@
 const features = [
   {
     icon: 'assets/features/icon-01.svg',
-    title: 'Free and Open-Source',
+    title: 'Herramientas y Equipos de Vanguardia',
     ref: 'javascript:void(0)',
     refTitle: 'Learn More',
-    description: 'Lorem Ipsum is simply dummy text of the printing and industry.',
+    description:
+      ' Contamos con tecnología de diagnóstico de última generación, elevadores hidráulicos y una amplia gama de herramientas especializadas',
   },
   {
     icon: 'assets/features/icon-02.svg',
-    title: 'Multipurpose Template',
+    title: 'Conocimientos técnicos avanzados',
     ref: 'javascript:void(0)',
     refTitle: 'Learn More',
-    description: 'Lorem Ipsum is simply dummy text of the printing and industry.',
+    description:
+      ' Estamos constantemente actualizados en las últimas tecnologías y avances del sector automotriz, garantizando así un servicio de calidad excepcional',
   },
   {
     icon: 'assets/features/icon-03.svg',
-    title: 'High-quality Design',
+    title: 'Instalaciones Amplias y Organizadas',
     ref: 'javascript:void(0)',
     refTitle: 'Learn More',
-    description: 'Lorem Ipsum is simply dummy text of the printing and industry.',
+    description:
+      'Contamos con zonas de trabajo amplias, áreas de almacenamiento organizadas y zonas designadas para tareas específicas',
   },
   {
     icon: 'assets/features/icon-04.svg',
-    title: 'All Essential Elements',
+    title: 'Servicio al Cliente',
     ref: 'javascript:void(0)',
     refTitle: 'Learn More',
-    description: 'Lorem Ipsum is simply dummy text of the printing and industry.',
+    description:
+      'Nuestro equipo se comunica de manera clara y transparente con cada cliente, explicando detalladamente los problemas y soluciones',
   },
 ];
 ---
@@ -37,11 +41,15 @@ const features = [
     <div class="-mx-4 flex flex-wrap">
       <div class="w-full px-4">
         <div class="mx-auto mb-12 max-w-[485px] text-center lg:mb-[70px]">
-          <span class="mb-2 block text-lg font-semibold text-primary">Características</span>
+          <span
+            class="mb-2 block text-lg font-semibold text-[#E8751A]"
+            style="font-family: 'Oxanium';">Principales</span
+          >
           <h2
             class="mb-3 text-3xl font-bold text-dark dark:text-white sm:text-4xl md:text-[40px] md:leading-[1.2]"
+            style="font-family: 'Oxanium';"
           >
-            Principales caracteristicas
+            Características
           </h2>
         </div>
       </div>
@@ -51,8 +59,8 @@ const features = [
         features.map((feature) => (
           <div class="w-full px-4 md:w-1/2 lg:w-1/4">
             <div class="wow fadeInUp group mb-12" data-wow-delay=".1s">
-              <div class="relative z-10 mb-10 flex h-[70px] w-[70px] items-center justify-center rounded-[14px] bg-primary">
-                <span class="absolute left-0 top-0 -z-[1] mb-8 flex h-[70px] w-[70px] rotate-[25deg] items-center justify-center rounded-[14px] bg-primary bg-opacity-20 duration-300 group-hover:rotate-45" />
+              <div class="relative z-10 mb-10 flex h-[70px] w-[70px] items-center justify-center rounded-[14px] bg-[#E8751A] p-2">
+                <span class="absolute left-0 top-0 -z-[1] mb-8 flex h-[70px] w-[70px] rotate-[25deg] items-center justify-center rounded-[14px] bg-[#E8751A] bg-opacity-40 duration-300 group-hover:rotate-45" />
                 <img src={feature.icon} alt="icon" />
               </div>
               <h4 class="mb-3 text-xl font-bold text-dark dark:text-white">{feature.title}</h4>
