--- a/src/components/layout/Breadcrumb.astro
+++ b/src/components/layout/Breadcrumb.astro
@@ -1,31 +1,36 @@
 <section
-  class="relative z-10 overflow-hidden pt-[120px] pb-[60px] md:pt-[130px] lg:pt-[160px] dark:bg-dark"
+  class="relative z-10 overflow-hidden pb-[60px] pt-[120px] dark:bg-dark md:pt-[130px] lg:pt-[160px]"
 >
   <div
-    class="w-full h-px bg-gradient-to-r from-stroke/0 via-stroke dark:via-dark-3 to-stroke/0 absolute left-0 bottom-0">
+    class="absolute bottom-0 left-0 h-px w-full bg-gradient-to-r from-stroke/0 via-stroke to-stroke/0 dark:via-dark-3"
+  >
   </div>
   <div class="container">
     <div class="-mx-4 flex flex-wrap items-center">
       <div class="w-full px-4">
         <div class="text-center">
-          <h1 class="mb-4 text-3xl font-bold text-dark dark:text-white sm:text-4xl md:text-[40px] md:leading-[1.2]">
+          <h1
+            class="mb-4 text-3xl font-bold text-dark dark:text-white sm:text-4xl md:text-[40px] md:leading-[1.2]"
+          >
             <slot name="title">Title</slot>
           </h1>
-          <p class="mb-5 text-base text-body-color dark:text-dark-6">
-            There are many variations of passages of Lorem Ipsum available.
-          </p>
+          <p class="mb-5 text-base text-body-color dark:text-dark-6"></p>
 
           <ul class="flex items-center justify-center gap-[10px]">
             <li>
-              <a href="/"
-                class="flex items-center gap-[10px] text-base font-medium text-dark dark:text-white">
+              <a
+                href="/"
+                class="flex items-center gap-[10px] text-base font-medium text-dark dark:text-white"
+              >
                 Home
               </a>
             </li>
             <li>
-              <a href="javascript:void(0)"
-                class="flex items-center gap-[10px] text-base font-medium text-body-color dark:text-dark-6">
-                <span class="text-body-color dark:text-dark-6"> / </span>
+              <a
+                href="javascript:void(0)"
+                class="flex items-center gap-[10px] text-base font-medium text-body-color dark:text-dark-6"
+              >
+                <span class="text-body-color dark:text-dark-6"> /</span>
                 <slot name="title">Title</slot>
               </a>
             </li>
