--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -9,27 +9,27 @@ const menuitems = [
     path: '/#about',
   },
   {
-    title: 'Precios',
-    path: '/#pricing',
+    title: 'Servicios',
+    path: '/#services',
   },
   {
-    title: 'Equipo',
-    path: '/#team',
+    title: 'Testimonios',
+    path: '/#testimonials',
   },
   {
     title: 'Contacto',
     path: '/#contact',
   },
-  {
-    title: 'Blog',
-    path: '/blog',
-  },
+  // {
+  //   title: 'Blog',
+  //   path: '/blog',
+  // },
   // {
   //   title: "Paginas",
   //   path: "javascript:void(0)",
   //   children: [
   //     { title: "About Page", path: "/about" },
-  //     { title: "Pricing Page", path: "/pricing" },
+  //     { title: "Servicios Page", path: "/services" },
   //     { title: "Contact Page", path: "/contact" },
   //     { title: "Blog Grid Page", path: "/blog" },
   //     { title: "Sign Up Page", path: "/signup" },
@@ -49,8 +49,9 @@ const menuitems = [
             <>
               <a
                 href="/"
-                class="navbar-logo  block w-full py-5 text-4xl font-semibold text-white dark:text-white"
+                class="navbar-logo header-logo block w-full py-5 font-semibold text-white dark:text-white sm:text-3xl lg:text-4xl"
                 style="font-family: 'Oxanium';"
+                id="header-logo"
               >
                 FLOPACH
               </a>
@@ -61,6 +62,7 @@ const menuitems = [
                 href="/"
                 class="navbar-logo block w-full py-5 text-4xl font-semibold text-slate-600 dark:text-slate-600"
                 style="font-family: 'Oxanium';"
+                id="header-logo"
               >
                 FLOPACH
               </a>
@@ -85,65 +87,65 @@ const menuitems = [
             <ul class="block lg:flex 2xl:ml-20">
               {
                 menuitems.map((item, index) => {
-                  if (!item.children) {
-                    return (
-                      <li class="group relative">
-                        <a
-                          href={item.path}
-                          class={` ${index}
+                  // if (!item.children) {
+                  return (
+                    <li class="group relative">
+                      <a
+                        href={item.path}
+                        class={` ${index}
                           ${
                             Astro.url.pathname === '/'
                               ? 'ud-menu-scroll mx-8 flex py-2 text-base font-medium text-dark group-hover:text-primary dark:text-white lg:ml-7 lg:mr-0 lg:inline-flex lg:px-0 lg:py-6 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-10'
                               : 'ud-menu-scroll mx-8 flex py-2 text-base font-medium text-dark group-hover:text-primary dark:text-white lg:ml-7 lg:mr-0 lg:inline-flex lg:px-0 lg:py-6 lg:text-body-color dark:lg:text-dark-6 xl:ml-10'
                           }
                           `}
-                        >
-                          {item.title}
-                        </a>
-                      </li>
-                    );
-                  }
+                      >
+                        {item.title}
+                      </a>
+                    </li>
+                  );
+                  // }
 
-                  if (item.children) {
-                    return (
-                      <li class="submenu-item group relative">
-                        <a
-                          href={item.path}
-                          class={` ${index}
-                          ${
-                            Astro.url.pathname === '/'
-                              ? 'relative mx-8 flex items-center justify-between py-2 text-base font-medium text-dark group-hover:text-primary dark:text-white lg:ml-8 lg:mr-0 lg:inline-flex lg:py-6 lg:pl-0 lg:pr-4 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-10'
-                              : 'relative mx-8 flex items-center justify-between py-2 text-base font-medium text-primary group-hover:text-primary lg:ml-8 lg:mr-0 lg:inline-flex lg:py-6 lg:pl-0 lg:pr-4 xl:ml-10'
-                          }
-                          `}
-                        >
-                          {item.title}
+                  // if (item.children) {
+                  //   return (
+                  //     <li class="submenu-item group relative">
+                  //       <a
+                  //         href={item.path}
+                  //         class={` ${index}
+                  //         ${
+                  //           Astro.url.pathname === '/'
+                  //             ? 'relative mx-8 flex items-center justify-between py-2 text-base font-medium text-dark group-hover:text-primary dark:text-white lg:ml-8 lg:mr-0 lg:inline-flex lg:py-6 lg:pl-0 lg:pr-4 lg:text-white lg:group-hover:text-white lg:group-hover:opacity-70 xl:ml-10'
+                  //             : 'relative mx-8 flex items-center justify-between py-2 text-base font-medium text-primary group-hover:text-primary lg:ml-8 lg:mr-0 lg:inline-flex lg:py-6 lg:pl-0 lg:pr-4 xl:ml-10'
+                  //         }
+                  //         `}
+                  //       >
+                  //         {item.title}
 
-                          <svg
-                            class="ml-2 fill-current"
-                            width="16"
-                            height="20"
-                            viewBox="0 0 16 20"
-                            fill="none"
-                            xmlns="http://www.w3.org/2000/svg"
-                          >
-                            <path d="M7.99999 14.9C7.84999 14.9 7.72499 14.85 7.59999 14.75L1.84999 9.10005C1.62499 8.87505 1.62499 8.52505 1.84999 8.30005C2.07499 8.07505 2.42499 8.07505 2.64999 8.30005L7.99999 13.525L13.35 8.25005C13.575 8.02505 13.925 8.02505 14.15 8.25005C14.375 8.47505 14.375 8.82505 14.15 9.05005L8.39999 14.7C8.27499 14.825 8.14999 14.9 7.99999 14.9Z" />
-                          </svg>
-                        </a>
+                  //         <svg
+                  //           class="ml-2 fill-current"
+                  //           width="16"
+                  //           height="20"
+                  //           viewBox="0 0 16 20"
+                  //           fill="none"
+                  //           xmlns="http://www.w3.org/2000/svg"
+                  //         >
+                  //           <path d="M7.99999 14.9C7.84999 14.9 7.72499 14.85 7.59999 14.75L1.84999 9.10005C1.62499 8.87505 1.62499 8.52505 1.84999 8.30005C2.07499 8.07505 2.42499 8.07505 2.64999 8.30005L7.99999 13.525L13.35 8.25005C13.575 8.02505 13.925 8.02505 14.15 8.25005C14.375 8.47505 14.375 8.82505 14.15 9.05005L8.39999 14.7C8.27499 14.825 8.14999 14.9 7.99999 14.9Z" />
+                  //         </svg>
+                  //       </a>
 
-                        <div class="submenu relative left-0 top-full hidden w-[250px] rounded-sm bg-white p-4 transition-[top] duration-300 group-hover:opacity-100 dark:bg-dark-2 lg:invisible lg:absolute lg:top-[110%] lg:block lg:opacity-0 lg:shadow-lg lg:group-hover:visible lg:group-hover:top-full">
-                          {item.children.map((item) => (
-                            <a
-                              href={item.path}
-                              class="block rounded px-4 py-[10px] text-sm text-body-color hover:text-primary dark:text-dark-6 dark:hover:text-primary"
-                            >
-                              {item.title}
-                            </a>
-                          ))}
-                        </div>
-                      </li>
-                    );
-                  }
+                  //       <div class="submenu relative left-0 top-full hidden w-[250px] rounded-sm bg-white p-4 transition-[top] duration-300 group-hover:opacity-100 dark:bg-dark-2 lg:invisible lg:absolute lg:top-[110%] lg:block lg:opacity-0 lg:shadow-lg lg:group-hover:visible lg:group-hover:top-full">
+                  //         {item.children.map((item) => (
+                  //           <a
+                  //             href={item.path}
+                  //             class="block rounded px-4 py-[10px] text-sm text-body-color hover:text-primary dark:text-dark-6 dark:hover:text-primary"
+                  //           >
+                  //             {item.title}
+                  //           </a>
+                  //         ))}
+                  //       </div>
+                  //     </li>
+                  //   );
+                  // }
                 })
               }
             </ul>
@@ -221,7 +223,7 @@ const menuitems = [
           </button>
           <div class="hidden sm:flex">
             <a
-              href="/signin"
+              href="#"
               class={`${
                 Astro.url.pathname === '/'
                   ? 'ml-4 signUpBtn rounded-md bg-white bg-opacity-20 py-2 px-[22px]  text-base font-medium text-white duration-300 ease-in-out hover:bg-opacity-100 hover:text-dark'
