--- a/src/components/Aboutsection.astro
+++ b/src/components/Aboutsection.astro
@@ -34,7 +34,7 @@
                 <img
                   src="/assets/about/about2.jpeg"
                   alt="about image"
-                  class="h-full w-full object-cover object-center"
+                  class="h-full w-full rounded-lg object-cover object-center"
                 />
               </div>
             </div>
@@ -46,12 +46,12 @@
                 <img
                   src="/assets/about/about1.jpeg"
                   alt="about image"
-                  class="h-full w-full object-cover object-center"
+                  class="h-full w-full rounded-lg object-cover object-center"
                 />
               </div>
 
               <div
-                class="relative z-10 mb-4 flex items-center justify-center overflow-hidden bg-blue-600 px-6 py-12 sm:mb-8 sm:h-[160px] sm:p-5 lg:mb-4 xl:mb-8"
+                class="rounded-lg relative z-10 mb-4 flex items-center justify-center overflow-hidden bg-blue-600 px-6 py-12 sm:mb-8 sm:h-[160px] sm:p-5 lg:mb-4 xl:mb-8"
               >
                 <div>
                   <span class="block text-5xl font-extrabold text-white">10</span>
