--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -33,7 +33,7 @@
             </li> -->
             <li>
               <a
-                href="#"
+                href="#contact"
                 class="flex items-end gap-4 rounded-md bg-white/[0.12] px-6 py-[14px] text-base font-medium text-white transition duration-300 ease-in-out hover:bg-white hover:text-dark"
               >
                 Obtener una cita
