--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -61,7 +61,7 @@ const testimonials = [
                 >
                   <div class="mb-[18px] flex items-center gap-[2px]">
                     {[...Array(5)].map(() => (
-                      <span class="text-[#FBB040]">
+                      <span class="text-[#E8751A]">
                         <svg
                           class="fill-current"
                           width="18"
