--- a/src/components/Contactsection.astro
+++ b/src/components/Contactsection.astro
@@ -1,30 +1,41 @@
 <script>
-  import { Resend } from 'resend';
-  const resend = new Resend('re_3ugy3bnw_PptAaM73djyXZsG9SdLpH7qH');
-  document.querySelector('#form')?.addEventListener('submit', (event) => {
+  const alert = document.getElementById('alert');
+  const loader = document.getElementById('loader');
+  const loading = document.getElementById('loading');
+  const form = document.getElementById('form');
+  const buttonSubmit = document.getElementById('buttonSubmit');
+
+  console.log(loader?.style);
+  form?.addEventListener('submit', (event) => {
     event.preventDefault();
-    asynchandleSendMail(event);
-  });
-  const asynchandleSendMail = async (event: Event) => {
-    const formData = Object.fromEntries(new FormData(event.target as HTMLFormElement));
-    console.log(formData);
-
-    const { data, error } = await resend.emails.send({
-      from: 'Acme <onboarding@resend.dev>',
-      to: ['crazyarnold01@gmail.com'],
-      subject: 'MENSAJE DE LA WEB',
-      html: `
-        <strong>Nombre: ${formData.fullName}</strong><br>
-        <strong>Telefono celular: ${formData.phone}</strong><br>
-        <strong>Correo electrónico: ${formData.mail}</strong><br>
-        <p>${formData.message}</p
-      `,
-    });
-    if (error) {
-      return console.error({ error });
+    if (loader && loading) {
+      loader.style.display = 'block';
+      loading.style.display = 'none';
+      buttonSubmit?.setAttribute('disabled', '');
     }
+    sendEmail(event);
+  });
+  const sendEmail = (event: Event) => {
+    const formdata = new FormData(event.target as HTMLFormElement);
+    const data = Object.fromEntries(formdata);
+    const xhr = new XMLHttpRequest();
+    xhr.open('POST', 'https://formsubmit.co/mecanicaflopach@gmail.com', true);
+    xhr.setRequestHeader('Content-type', 'application/json; charset=UTF-8');
+    xhr.send(JSON.stringify(data));
 
-    console.log({ data });
+    xhr.onload = function (e) {
+      if (this.readyState === XMLHttpRequest.DONE && this.status === 200) {
+        if (alert) {
+          alert.style.display = 'block';
+        }
+        if (loader && loading) {
+          loader.style.display = 'none';
+          loading.style.display = 'block';
+          buttonSubmit?.removeAttribute('disabled');
+        }
+        form?.reset();
+      }
+    };
   };
 </script>
 
@@ -92,7 +103,7 @@
           </div>
         </div>
       </div>
-      <div class="mt-10 w-full px-4 pt-40 lg:w-5/12 xl:w-4/12">
+      <div class="sm mt-40 w-full px-4 pt-40 sm:mt-2 lg:w-5/12 xl:mt-12 xl:w-4/12">
         <div
           class="wow fadeInUp rounded-lg bg-white px-8 py-10 shadow-testimonial dark:bg-dark-2 dark:shadow-none sm:px-10 sm:py-12 md:p-[60px] lg:p-10 lg:px-10 lg:py-12 2xl:p-[60px]"
           data-wow-delay=".2s"
@@ -102,61 +113,95 @@
           >
             Envianos un mensaje
           </h3>
+          <div
+            id="alert"
+            class="rounded-lg border border-teal-200 bg-teal-100 p-4 text-sm text-teal-800 dark:border-teal-900 dark:bg-teal-800/10 dark:text-teal-500"
+            role="alert"
+            style="display: none"
+          >
+            <span class="font-bold">Mensaje enviado</span>
+          </div>
           <form id="form">
             <div class="mb-[22px]">
-              <label for="fullName" class="mb-4 block text-sm text-body-color dark:text-dark-6"
+              <label for="nombre" class="mb-4 block text-sm text-body-color dark:text-dark-6"
                 >Nombre completo <span class="text-blue-600">*</span></label
               >
               <input
                 required
                 type="text"
-                name="fullName"
+                name="nombre"
                 placeholder="Ingrese su nombre"
                 class="w-full border-0 border-b border-[#f1f1f1] bg-transparent pb-3 text-body-color placeholder:text-body-color/60 focus:border-primary focus:outline-none dark:border-dark-3 dark:text-dark-6"
               />
             </div>
             <div class="mb-[22px]">
-              <label for="email" class="mb-4 block text-sm text-body-color dark:text-dark-6"
+              <label
+                for="Correo electrónico"
+                class="mb-4 block text-sm text-body-color dark:text-dark-6"
                 >Correo electrónico <span class="text-blue-600">*</span></label
               >
               <input
                 required
                 type="email"
-                name="email"
+                name="Correo electrónico"
                 placeholder="ejemplo@ejemplo.com"
                 class="w-full border-0 border-b border-[#f1f1f1] bg-transparent pb-3 text-body-color placeholder:text-body-color/60 focus:border-primary focus:outline-none dark:border-dark-3 dark:text-dark-6"
               />
             </div>
             <div class="mb-[22px]">
-              <label for="phone" class="mb-4 block text-sm text-body-color dark:text-dark-6"
+              <label for="Celular" class="mb-4 block text-sm text-body-color dark:text-dark-6"
                 >Celular <span class="text-blue-600">*</span></label
               >
               <input
                 required
                 type="text"
-                name="phone"
+                name="Celular"
+                min="9"
+                minlength="9"
+                max="9"
+                size="9"
+                maxlength="9"
                 placeholder="999999999"
                 class="w-full border-0 border-b border-[#f1f1f1] bg-transparent pb-3 text-body-color placeholder:text-body-color/60 focus:border-primary focus:outline-none dark:border-dark-3 dark:text-dark-6"
               />
             </div>
             <div class="mb-[30px]">
-              <label for="message" class="mb-4 block text-sm text-body-color dark:text-dark-6"
+              <label for="Mensaje" class="mb-4 block text-sm text-body-color dark:text-dark-6"
                 >Mensaje<span class="text-blue-600">*</span></label
               >
               <textarea
                 required
-                name="message"
+                name="Mensaje"
                 rows="2"
                 placeholder="Ingrese su mensaje aquí"
                 class="w-full border-0 border-b border-[#f1f1f1] bg-transparent pb-3 text-body-color placeholder:text-body-color/60 focus:border-primary focus:outline-none dark:border-dark-3 dark:text-dark-6"
               ></textarea>
             </div>
+            <input type="hidden" name="_captcha" value="false" />
+            <input type="hidden" name="_subject" value="MENSAJE DE LA WEB" />
             <div class="mb-0">
               <button
+                id="buttonSubmit"
                 type="submit"
-                class="inline-flex items-center justify-center rounded-md bg-primary px-10 py-3 text-base font-medium text-white transition duration-300 ease-in-out hover:bg-blue-dark"
+                class="inline-flex w-full items-center justify-center rounded-md bg-primary px-10 py-3 text-base font-medium text-white transition duration-300 ease-in-out hover:bg-blue-dark"
               >
-                Enviar
+                <span id="loading">Enviar</span>
+                <span id="loader" style="display: none">
+                  <svg
+                    aria-hidden="true"
+                    class="inline h-4 w-4 animate-spin fill-blue-600 text-gray-200 dark:text-gray-200"
+                    viewBox="0 0 100 101"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
+                      fill="currentColor"></path>
+                    <path
+                      d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z"
+                      fill="currentFill"></path>
+                  </svg>
+                </span>
               </button>
             </div>
           </form>
