--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -4,25 +4,25 @@ const footerLinks = [
     header: 'Horario de atención',
     line: [
       {
-        name: 'Lunes',
+        name: 'Lunes: 8 a.m. - 6 p.m.',
       },
       {
-        name: 'Martes',
+        name: 'Martes: 8 a.m. - 6 p.m.',
       },
       {
-        name: 'Miercoles',
+        name: 'Miercoles: 8 a.m. - 6 p.m.',
       },
       {
-        name: 'Jueves',
+        name: 'Jueves: 8 a.m. - 6 p.m.',
       },
       {
-        name: 'Viernes',
+        name: 'Viernes: 8 a.m. - 6 p.m.',
       },
       {
-        name: 'Sabado',
+        name: 'Sabado: 8 a.m. - 6 p.m.',
       },
       {
-        name: 'Domingo',
+        name: 'Domingo: Previa anticipación',
       },
     ],
   },
@@ -121,7 +121,7 @@ const footerLinks = [
           </div>
         </div>
       </div>
-      <div class="w-full px-4 sm:w-1/2 md:w-1/2 lg:w-2/12 xl:w-2/12">
+      <div class="w-full px-4 sm:w-1/2 md:w-1/2 lg:w-6 xl:w-2/6">
         <div class="mb-10 w-full">
           <h4 class="mb-9 text-lg font-semibold text-white">{footerLinks[0].header}</h4>
           <ul>
@@ -139,7 +139,7 @@ const footerLinks = [
           </ul>
         </div>
       </div>
-      <div class="w-full px-4 sm:w-1/2 md:w-1/2 lg:w-3/12 xl:w-2/12">
+      <!-- <div class="w-full px-4 sm:w-1/2 md:w-1/2 lg:w-3/12 xl:w-2/12">
         <div class="mb-10 w-full">
           <h4 class="mb-9 text-lg font-semibold text-white">{footerLinks[1].header}</h4>
           <ul>
@@ -156,7 +156,7 @@ const footerLinks = [
             }
           </ul>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </footer>
