--- a/src/components/Aboutsection.astro
+++ b/src/components/Aboutsection.astro
@@ -1,6 +1,62 @@
+---
+// import Swiper from 'swiper';
+// import 'swiper/css';
+
+// const swiper = new Swiper('.brand-slider', {
+//   loop: true,
+//   grabCursor: true,
+//   speed: 6000,
+//   autoplay: {
+//     delay: 2,
+//     disableOnInteraction: false,
+//   },
+//   breakpoints: {
+//     390: {
+//       slidesPerView: 2,
+//       spaceBetween: 2,
+//     },
+//     450: {
+//       slidesPerView: 2,
+//       spaceBetween: 2,
+//     },
+//     640: {
+//       slidesPerView: 3,
+//       spaceBetween: 3,
+//     },
+//     768: {
+//       slidesPerView: 4,
+//       spaceBetween: 4,
+//     },
+//     1000: {
+//       slidesPerView: 4,
+//       spaceBetween: 5,
+//     },
+//   },
+// });
+---
+
 <!-- ====== About Section Start -->
 <section id="about" class="bg-gray-1 pb-8 pt-20 dark:bg-dark-2 lg:pb-[70px] lg:pt-[120px]">
   <div class="container">
+    <div class="swiper brand-slider">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide slide">
+          <img src="assets/brands/ayroui.svg" alt="patrocinador 1 astralis" loading="lazy" />
+        </div>
+        <div class="swiper-slide slide">
+          <img src="assets/brands/02.png" alt="patrocinador 2 astralis" loading="lazy" />
+        </div>
+        <div class="swiper-slide slide">
+          <img src="assets/brands/03.png" alt="patrocinador 3 astralis" loading="lazy" />
+        </div>
+        <div class="swiper-slide slide">
+          <img src="assets/brands/04.png" alt="patrocinador 4 astralis" loading="lazy" />
+        </div>
+        <div class="swiper-slide slide">
+          <img src="assets/brands/05.png" alt="patrocinador 5 astralis" loading="lazy" />
+        </div>
+      </div>
+    </div>
     <div class="wow fadeInUp" data-wow-delay=".2s">
       <div class="-mx-4 flex flex-wrap items-center">
         <div class="w-full px-4 lg:w-1/2">
@@ -51,7 +107,7 @@
               </div>
 
               <div
-                class="rounded-lg relative z-10 mb-4 flex items-center justify-center overflow-hidden bg-blue-600 px-6 py-12 sm:mb-8 sm:h-[160px] sm:p-5 lg:mb-4 xl:mb-8"
+                class="relative z-10 mb-4 flex items-center justify-center overflow-hidden rounded-lg bg-blue-600 px-6 py-12 sm:mb-8 sm:h-[160px] sm:p-5 lg:mb-4 xl:mb-8"
               >
                 <div>
                   <span class="block text-5xl font-extrabold text-white">10</span>
