--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -121,7 +121,7 @@ const footerLinks = [
           </div>
         </div>
       </div>
-      <div class="w-full px-4 sm:w-1/2 md:w-1/2 lg:w-6 xl:w-2/6">
+      <div class="w-full px-4 sm:w-1/2 md:w-1/2 lg:w-1/2 xl:w-1/2">
         <div class="mb-10 w-full">
           <h4 class="mb-9 text-lg font-semibold text-white">{footerLinks[0].header}</h4>
           <ul>
