--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,25 +4,19 @@ import Features from '../components/Features.astro';
 import Hero from '../components/Hero.astro';
 import Testimonials from '../components/Testimonials.astro';
 import Layout from '../layouts/Layout.astro';
-import Pricing from '../components/Pricingsection.astro';
-import Faq from '../components/Faq.astro';
-import Clients from '../components/Clients.astro';
 import Team from '../components/Team.astro';
 import Contact from '../components/Contactsection.astro';
-import CTA from '../components/CTAsection.astro';
-import Blogsection from '../components/Blogsection.astro';
 ---
 
-<Layout description="Flopach" title="FLOPACH | MECANICA">
+<Layout
+  description="Somos un taller automotriz especializados en la atención, reparación y mantenimiento de automóviles de las principales marcas del mercado. Contamos con personal con 10 años de experiencia, en servicios en mantenimiento preventivo y correctivo."
+  title="FLOPACH | MECANICA"
+>
   <Hero />
   <About />
   <Features />
-  <!-- <CTA /> -->
-  <!-- <Pricing /> -->
   <Team />
   <Testimonials />
-  <!-- <Faq /> -->
-  <!-- <Blogsection /> -->
   <Contact />
   <!-- <Clients /> -->
 </Layout>
