--- a/src/components/Aboutsection.astro
+++ b/src/components/Aboutsection.astro
@@ -38,7 +38,7 @@
 <!-- ====== About Section Start -->
 <section id="about" class="bg-gray-1 pb-8 pt-20 dark:bg-dark-2 lg:pb-[70px] lg:pt-[120px]">
   <div class="container">
-    <div class="swiper brand-slider">
+    <!-- <div class="swiper brand-slider">
       <div class="swiper-wrapper">
         <div class="swiper-slide slide">
           <img src="assets/brands/ayroui.svg" alt="patrocinador 1 astralis" loading="lazy" />
@@ -56,7 +56,7 @@
           <img src="assets/brands/05.png" alt="patrocinador 5 astralis" loading="lazy" />
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="wow fadeInUp" data-wow-delay=".2s">
       <div class="-mx-4 flex flex-wrap items-center">
         <div class="w-full px-4 lg:w-1/2">
