--- a/src/components/Contactsection.astro
+++ b/src/components/Contactsection.astro
@@ -55,7 +55,9 @@
   </div>
   <div class="container px-4">
     <div class="-mx-4 flex flex-wrap items-center">
-      <div class="xs:pt-[240px] w-full px-4 sm:pt-[250px] md:pt-[200px] lg:w-7/12 xl:w-8/12">
+      <div
+        class="w-full px-4 xs:pt-[240px] sm:pt-[250px] md:pt-[200px] lg:w-7/12 lg:pt-[100px] xl:w-8/12"
+      >
         <div class="ud-contact-content-wrapper">
           <div class="ud-contact-title mb-12 lg:mb-[10px]">
             <span class="mb-6 block text-base font-medium text-dark dark:text-white">
@@ -67,7 +69,7 @@
               Hablemos de tu problema
             </h2>
           </div>
-          <div class="mb-12 flex flex-wrap justify-between lg:mb-0">
+          <div class="mb-12 flex flex-wrap justify-between lg:mb-0 lg:mt-6">
             <div class="mb-8 flex w-[330px] max-w-full">
               <div class="mr-6 text-[32px] text-primary">
                 <svg width="29" height="35" viewBox="0 0 29 35" class="fill-current">
@@ -106,11 +108,31 @@
                 </p>
               </div>
             </div>
+            <div class="mb-8 flex w-[330px] max-w-full">
+              <div class="mr-6 text-[32px] text-primary">
+                <svg width="36" height="30" viewBox="0 0 36 30" class="fill-current">
+                  <path
+                    d="M 12 0 C 5.371094 0 0 5.371094 0 12 C 0 18.628906 5.371094 24 12 24 C 18.628906 24 24 18.628906 24 12 C 24 5.371094 18.628906 0 12 0 Z M 12 2 C 17.523438 2 22 6.476563 22 12 C 22 17.523438 17.523438 22 12 22 C 6.476563 22 2 17.523438 2 12 C 2 6.476563 6.476563 2 12 2 Z M 10.9375 3.875 L 10.5 12.0625 L 10.59375 12.9375 L 16.75 18.375 L 17.71875 17.375 L 12.625 11.96875 L 12.1875 3.875 Z"
+                    stroke-linecap="round"></path>
+                </svg>
+              </div>
+              <div>
+                <h5 class="mb-[18px] text-lg font-semibold text-dark dark:text-white">
+                  Horario de atención
+                </h5>
+                <p class="text-base text-body-color dark:text-dark-6">
+                  Lunes a Sábado: 08:00 AM - 06:00 PM
+                </p>
+                <p class="mt-1 text-base text-body-color dark:text-dark-6">
+                  Domingo: Previa anticipación
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
       <div
-        class="xs:pt-2 xs:mt-2 mt-40 w-full px-4 pt-40 sm:mt-2 sm:pt-3 md:pt-[30px] lg:w-5/12 lg:pt-[200px] xl:mt-12 xl:w-4/12"
+        class="mt-40 w-full px-4 pt-40 xs:mt-2 xs:pt-2 sm:mt-2 sm:pt-3 md:pt-[30px] lg:w-5/12 lg:pt-[200px] xl:mt-12 xl:w-4/12"
       >
         <div
           class="wow fadeInUp rounded-lg bg-white px-8 py-10 shadow-testimonial dark:bg-dark-2 dark:shadow-none sm:px-10 sm:py-12 md:p-[60px] lg:p-10 lg:px-10 lg:py-12 2xl:p-[60px]"
