box model sizing fixed

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -204,8 +204,11 @@
         </div>
       </div>
     </div>
-    <div class="max-w-full px-10 xs:hidden sm:hidden md:block lg:block xl:block" id="model">
-      <span id="loading" class="pt-60 text-center">
+    <div
+      class="box-border h-[700px] w-[1288px] max-w-full items-center px-10 text-center xs:hidden sm:hidden md:block lg:block xl:block"
+      id="model"
+    >
+      <span id="loading" class="items-center">
         <svg
           aria-hidden="true"
           class="inline h-8 w-8 animate-spin fill-blue-500 text-gray-400 dark:text-gray-200"
